--- a/views/signin.hbs
+++ b/views/signin.hbs
@@ -1,4 +1,6 @@
+
 <section class="sign form-container">
+  {{> flash_message}}
   <header class="form-header">
     <h1 class="form-title">Welcome Back !</h1>
     <p class="form-subtitle">Enjoy yourself and be comfortable </p>
