--- a/views/partial/shop_nav.hbs
+++ b/views/partial/shop_nav.hbs
@@ -1,7 +1,6 @@
+{{! HEADER }}
 
-  {{!-- HEADER --}}
-
-  {{!-- END HEADER --}}
+{{! END HEADER }}
 <div class="big-container">
   <header class="header">
     <nav class="nav-wrapper flexed-item">
@@ -26,25 +25,33 @@
             <a href="/sneakers/kids">Kids</a>
           </li>
           {{#if isLoggedIn}}
-          <li class="nav-item animated-link nav-item-admin">
-            <a href="/prod-add">Add product</a>
-          </li>
-           <li class="nav-item animated-link nav-item-admin">
-            <a href="/prod-manage">Manage products</a>
-          </li>
+            <li class="nav-item animated-link nav-item-admin">
+              <a href="/prod-add">Add product</a>
+            </li>
+            <li class="nav-item animated-link nav-item-admin">
+              <a href="/prod-manage">Manage products</a>
+            </li>
           {{/if}}
         </ul>
       </div>
       <div class="flexed-item nav-end">
         {{#unless isLoggedIn}}
-        <a  href="/auth/signin" id="nav_login" class="button-ternary flexed-item nav-end-item">
-          <span class="btn-text">Sign in</span>
-        </a>
+          <a
+            href="/auth/signin"
+            id="nav_login"
+            class="button-ternary flexed-item nav-end-item"
+          >
+            <span class="btn-text">Sign in</span>
+          </a>
         {{/unless}}
         {{#if isLoggedIn}}
-        <a  href="/logout" id="nav_logout" class="button-ternary flexed-item nav-end-item">
-          <span class="btn-text">Log out</span>
-        </a>
+          <a
+            href="/auth/logout"
+            id="nav_logout"
+            class="button-ternary flexed-item nav-end-item"
+          >
+            <span class="btn-text">Log out</span>
+          </a>
         {{/if}}
         <i class="fas fa-shopping-cart shop-cart-icon nav-end-item"></i>
       </div>
