--- a/views/partial/dashboard_sneaker_row.hbs
+++ b/views/partial/dashboard_sneaker_row.hbs
@@ -11,8 +11,13 @@
   <div>${{this.price}}</div>
 </td>
 <td class="table-division">
-  <a href="/product-edit/{{this._id}}" data-id-sneaker="{{this._id}}" class="fa fa-edit table-icon"></a>
+  <a href="/product-edit/{{this._id}}" data-id-sneaker="{{this._id}}">Edit</a>
+  {{! class="fa fa-edit table-icon" }}
 </td>
 <td class="table-division">
-  <span class="fa fa-trash table-icon" data-id-sneaker="{{this._id}}"  aria-hidden="true"></span>
+  <span
+    class="fa fa-trash table-icon"
+    data-id-sneaker="{{this._id}}"
+    aria-hidden="true"
+  ></span>
 </td>
